	  all updated to work with the new cob_settings structure

2015-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_load_config, cob_load_config_file, cb_config_entry): new
	  functions for loading a runtime configuration file
	* call.c, common.c, intrinsic.c, numeric.c: fix segfault on early exit
	  during runtime initialisation

2015-03-01  Ron Norman <rjn@inglenet.com>

	* fileio.c updated to return correct status codes for WRITE/REWRITE
	  related to duplicate keys being detected
	  This was tested with BDB, D-ISAM and VB-ISAM 2.1.1

2015-02-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobgetopt.c (cob_getopt_long_long): List all ambiguous possibilities,
	  applied patch of Ulrich Drepper (see glibc's BZ #7101 - 2011-05-15)
	* cobgetopt.c: removed \n from msgids, converted all backtick to apostrophe

2015-02-26  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: fixed buffer overflow in screen section ACCEPT

2015-02-26  Ron Norman <rjn@inglenet.com>

	* fileio.c [WITH_VBISAM, VB_RTD]: updated to handle VB-ISAM 2.1.1
	* fileio.c [WITH_DB]: handle sparse and split keys for BDB
	  This was tested with BDB, D-ISAM, VB-ISAM 2.0 and VB-ISAM 2.1.1

2015-02-23  Ron Norman <rjn@inglenet.com>

	Implemented INDEXED file support for sparse and split keys FR #23 + FR #281
	* fileio.c: updated to handle sparse and split keys
	  This was tested with D-ISAM and VB-ISAM 2.0

2015-02-18  Ron Norman <rjn@inglenet.com>

	* common.c (cob_debug_logger): if fmt starts with '~' then force print of line#
	* reportio.c: Fix spacing problems related to CONTROL FOOTING

2015-02-16  Ron Norman <rjn@inglenet.com>

	Implemented DEBUG logging for Compiler developers
	* common.h: added DEBUG_xxx macros
	* common.c: added cob_debug_xxx subroutines
	* reportio.c: updated to use this new COB_DEBUG_LOG feature

2015-02-12  Ron Norman <rjn@inglenet.com>

	* Merged Report Writer code into 2.0 code base to create a new 2.0
	  with all collective features
